--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -1,6 +1,6 @@
 // font settings:
-$fontFace: Pragmata Pro;
-$fontHoverStyle: italic;
+$fontFace: Hack;
+$fontHoverStyle: regular;
 $fontWeight: 600;
 $fontH1Size: 2.2em;
 $fontH2Size: 1.2em;
