--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   display: flex;
   color: #dcd9c0;
   background: #101010;
-  font-family: Pragmata Pro;
+  font-family: Zed Mono;
   margin-right: 9em;
   padding: 1em;
 }
